fix(popovers): clear id to avoid anchor jumps within popover

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -351,6 +351,10 @@ h6 {
   &[id]:hover > a {
     opacity: 1;
   }
+
+  &:not([id]) > a[role="anchor"] {
+    display: none;
+  }
 }
 
 // typography improvements
